Operator and Variables

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -1,20 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello world\")"
+    "x = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = \"4\""
    ]
   },
   {
@@ -26,12 +34,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "4 4\n"
      ]
     }
    ],
    "source": [
-    "print(3+4)"
+    "print(x,y)"
    ]
   },
   {
@@ -43,12 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "<class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "print(x)"
+    "print(type(y))"
    ]
   },
   {
@@ -60,12 +68,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "140703230845832 140703230889256\n"
      ]
     }
    ],
    "source": [
-    "print(y)"
+    "print(id(x),id(y))  # Different"
    ]
   },
   {
@@ -77,46 +85,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "140703230845832 140703230845832\n"
      ]
     }
    ],
    "source": [
-    "print(x+y)"
+    "z= 4\n",
+    "print(id(x),id(z))  # Same"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x is y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x is not y)"
+    "# Not acceptable\n",
+    "1a\n",
+    "a b\n",
+    "$a\n"
    ]
   }
  ],
