--- a/operator.ipynb
+++ b/operator.ipynb
@@ -313,6 +313,29 @@
     "print(bin(k&l))\n",
     "print(bin(k|l))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "0b110\n"
+     ]
+    }
+   ],
+   "source": [
+    "# XOR \n",
+    "a = 0b0011\n",
+    "b = 0b0101\n",
+    "\n",
+    "print(a^b)\n",
+    "print(bin(a^b))"
+   ]
   }
  ],
  "metadata": {
