--- a/datatypes.ipynb
+++ b/datatypes.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,8 @@
       "4j\n",
       "<class 'complex'>\n",
       "True\n",
-      "<class 'bool'>\n"
+      "<class 'bool'>\n",
+      "<class 'list'>\n"
      ]
     }
    ],
@@ -104,7 +105,110 @@
     "for i in range(0,5):\n",
     "    print(a[i])\n",
     "    print(type(a[i]))\n",
+    "print(type(a))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 6, 5, 7.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [10,6,\"hi\",7.8]   # mutable/ changable\n",
+    "l[2]= 5\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 89, 'hi', 9.8)\n",
+      "<class 'tuple'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tuple  faster as compare to  list\n",
+    "\n",
+    "t = (12,89,\"hi\",9.8)\n",
+    "print(t)\n",
+    "print(type(t))\n",
+    "#t[1]= 89  # immutable\n",
+    "t1= (7)\n",
+    "print(type(t1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 7, 2: 9, 3: 4, 'hi': 8}\n",
+      "<class 'dict'>\n",
+      "7\n",
+      "{1: 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dictionary  key:value  mutable\n",
+    "\n",
+    "d = {\n",
+    "    1 : 7,\n",
+    "    2 : 9,\n",
+    "    3 : 4,\n",
+    "    \"hi\" : 8\n",
+    "\n",
+    "}\n",
+    "print(d)\n",
+    "print(type(d))\n",
+    "print(d[1])\n",
+    "\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{9, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#set no dublicacy, immutable\n",
+    "\n",
+    "s = {7,9,6,7,7,6,9}\n",
+    "print(s)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
