Tuple Sets Function

--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -306,6 +306,59 @@
     "d[\"state\"]= \"Faridabad\"\n",
     "d\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nested Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nitish\n",
+      "1 {'name': 'Nitish', 'DOB': '21-01-2001', 'Gate-Qualified': 'Yes'}\n",
+      "2 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "3 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "4 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "5 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "6 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "7 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "8 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "9 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "10 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n",
+      "11 {'name': 'Nitish', 'DOB': '22-01-2002', 'Gate-Qualified': 'Yes'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ai = {\n",
+    "    1 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    2 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    3 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    4 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    5 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    6 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    7 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    8 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    9 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    10 : {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'},\n",
+    "    11: {'name':'Nitish','DOB':'22-01-2002','Gate-Qualified':'Yes'}\n",
+    "\n",
+    "}\n",
+    "print(ai[1]['name'])\n",
+    "\n",
+    "ai[1]['DOB'] = \"21-01-2001\"  #update\n",
+    "for i,j in ai.items():\n",
+    "    print(i,j)"
+   ]
   }
  ],
  "metadata": {
